# float-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflow/: ci.yml
include/: float.h
src/: float.c
test/: test.c
